syntax = "proto3";

option go_package = "pb/user";

message UserStatus {
    string status_text = 1;
    int64 status_time = 2;
}